tests/errors/semantic/blocking/None_is.py
def none_is_none():
    if None is None:
        return True
